# wide-logger

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_decorator.py  test_django.py  test_logger.py
tests/asyncio/: conftest.py  test_decorator.py  test_django.py  test_tracing.py
wide_logger/: __init__.py  asyncio_tracing.py  django.py  logger.py
